Bug 143220 - xlsx export: link to sheet not valid
Summary: xlsx export: link to sheet not valid
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.3.0 target:7.2.1
Keywords: filter:xlsx
Depends on:
Blocks: XLSX-Hyperlink
  Show dependency treegraph
 
Reported: 2021-07-06 20:32 UTC by raal
Modified: 2021-10-11 19:37 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Example file with internal links pointing to other sheets (10.51 KB, application/vnd.oasis.opendocument.spreadsheet)
2021-07-13 06:47 UTC, NISZ LibreOffice Team
Details
The example file saved as xlsx (7.06 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2021-07-13 06:48 UTC, NISZ LibreOffice Team
Details
The xlsx version of the example in Excel (37.99 KB, image/png)
2021-07-13 06:49 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description raal 2021-07-06 20:32:55 UTC
Description:
Hyperlink to another sheet don't works in Excel. Tested LO Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a) and 7.3dev.

Steps to Reproduce:
1.Insert hyperlink to other sheets (Insert > Hyperlink > document > Target in document > Sheet2
2. Save as xlsx
3.open in excel

Actual Results:
link doesn't works. Error message Reference is not valid.

Expected Results:
link works


Reproducible: Always


User Profile Reset: No



Additional Info:
When you compare files from LO and excel, you can see where is the difference:

export from LO:  <hyperlinks><hyperlink display="#Sheet2" location="Sheet2" ref="A1"/></hyperlinks>
export from excel: <hyperlinks><hyperlink ref="A1" location="Sheet2!A1" display="Sheet2!A1"/></hyperlinks>

parameter should be location="Sheet2!A1"
Comment 1 NISZ LibreOffice Team 2021-07-13 06:47:16 UTC
Created attachment 173522 [details]
Example file with internal links pointing to other sheets
Comment 2 NISZ LibreOffice Team 2021-07-13 06:48:44 UTC
Created attachment 173523 [details]
The example file saved as xlsx

With yesterdays nightly:

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 0fc020fb73c86a20608e8dff12af607e60327379
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL

The links in this one surprisingly work fine in Calc.
Comment 3 NISZ LibreOffice Team 2021-07-13 06:49:42 UTC
Created attachment 173524 [details]
The xlsx version of the example in Excel

but Excel says "Invalid reference".
Comment 4 NISZ LibreOffice Team 2021-07-13 06:50:22 UTC
@Tünde maybe one for you?
Comment 5 Commit Notification 2021-07-26 11:56:11 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3c3b9ad8886da916027f0fb940a2df822d63d4d7

tdf#143220 XLSX export: fix hyperlink to sheet target

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 NISZ LibreOffice Team 2021-08-09 12:51:02 UTC
Verified in:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: d1f1f546b212ecd651146addeb328806bb270d5f
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded
Comment 7 Commit Notification 2021-08-10 06:38:23 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/a5812749820d5118c3bb4297e5f785635c75f07a

tdf#143220 XLSX export: fix hyperlink to sheet target

It will be available in 7.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.