sc/qa/unit/subsequent_export-test2.cxx
@@ -194,6 +194,7 @@ public:
     void testButtonFormControlXlsxExport();
     void testTdf142929_filterLessThanXLSX();
     void testInvalidNamedRange();
+    void testTdf143220XLSX();
 
     CPPUNIT_TEST_SUITE(ScExportTest2);
 
@@ -296,6 +297,7 @@ public:
     CPPUNIT_TEST(testButtonFormControlXlsxExport);
     CPPUNIT_TEST(testTdf142929_filterLessThanXLSX);
     CPPUNIT_TEST(testInvalidNamedRange);
+    CPPUNIT_TEST(testTdf143220XLSX);
 
     CPPUNIT_TEST_SUITE_END();
 
@@ -2458,6 +2460,19 @@ void ScExportTest2::testInvalidNamedRange()
     // Without the fix in place, this test would have failed, we didn't ignore the problematic named
     // range on import.
     CPPUNIT_ASSERT(!xNamedRanges->hasByName("myname"));
+}
+
+void ScExportTest2::testTdf143220XLSX()
+{
+    ScDocShellRef xDocSh = loadDoc(u"tdf143220.", FORMAT_ODS);
+    CPPUNIT_ASSERT(xDocSh.is());
+
+    xmlDocUniquePtr pDoc = XPathHelper::parseExport2(*this, *xDocSh, m_xSFactory,
+                                                     "xl/worksheets/sheet1.xml", FORMAT_XLSX);
+    CPPUNIT_ASSERT(pDoc);
+    assertXPath(pDoc, "/x:worksheet/x:hyperlinks/x:hyperlink", "location", "Sheet2!A1");
+
+    xDocSh->DoClose();
 }
 
 CPPUNIT_TEST_SUITE_REGISTRATION(ScExportTest2);
